# tinyaes

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_all.cpp
fuzz/: CMakeLists.txt  fuzz_cbc.cpp  fuzz_ctr.cpp  fuzz_ecb.cpp  fuzz_gcm.cpp
include/: tinyaes.h
include/tinyaes/: cbc.h  common.h  ctr.h  ecb.h  gcm.h  version.h
src/: cbc.cpp  cpuid.cpp  cpuid.h  ctr.cpp  ecb.cpp  gcm.cpp  iv_generate.cpp  keyschedule.cpp  secure_zero.cpp
src/backend/: aes_aesni.cpp  aes_arm_ce.cpp  aes_portable.cpp  aes_vaes.cpp  ghash_arm_ce.cpp  ghash_pclmulqdq.cpp  ghash_portable.cpp  ghash_vpclmulqdq.cpp
src/internal/: aes_impl.h  endian.h  ghash.h
tests/: CMakeLists.txt  test_cbc.cpp  test_cpuid.cpp  test_ctr.cpp  test_ecb.cpp  test_gcm.cpp  test_gcm_auth_failure.cpp  test_harness.h  test_iv_generation.cpp  test_keyschedule.cpp  test_padding.cpp
tests/vectors/: aes_cbc_vectors.inl  aes_ctr_vectors.inl  aes_ecb_vectors.inl  aes_gcm_vectors.inl  aes_keyschedule_vectors.inl
